Enable OTA and allow setting preferences from websocket

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -14,9 +14,13 @@ board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = 
+lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	esphome/AsyncTCP-esphome@^2.0.0
 	lennarthennigs/Button2@^2.0.3
 	bblanchon/ArduinoJson@^6.19.4
 	contrem/arduino-timer@^2.3.1
+
+
+upload_protocol = espota
+upload_port = 192.168.1.122
