--- a/webui/package.json
+++ b/webui/package.json
@@ -20,6 +20,7 @@
     "@types/web-bluetooth": "^0.0.15",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
