Organize esp32 code and server webui from esp

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -24,3 +24,7 @@ lib_deps =
 
 upload_protocol = espota
 upload_port = 192.168.1.122
+board_build.embed_files =
+	src/webui/index.html.gz
+	src/webui/assets/index.css.gz
+	src/webui/assets/index.js.gz
