Better manage game loops and core pinning

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -19,11 +19,9 @@ lib_deps =
 	esphome/AsyncTCP-esphome@^2.0.0
 	lennarthennigs/Button2@^2.0.3
 	bblanchon/ArduinoJson@^6.19.4
-	contrem/arduino-timer@^2.3.1
-
-
-upload_protocol = espota
-upload_port = 192.168.1.122
+	joaolopesf/SerialDebug@^0.9.82
+; upload_protocol = espota
+; upload_port = 192.168.1.122
 board_build.embed_files =
 	src/webui/index.html.gz
 	src/webui/assets/index.css.gz
